--- a/.github/workflows/ggfdlp.yml
+++ b/.github/workflows/ggfdlp.yml
@@ -15,7 +15,7 @@ jobs:
         VN_US_PRD: ${{ secrets.VN_US_PRD }}
         VN_PRD: ${{ secrets.VN_PRD }}
     - name: Enable TS
-      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 5
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "VpsWinserv228666." -Force)
     - name: Download
