--- a/.github/workflows/windows-2022.yml
+++ b/.github/workflows/windows-2022.yml
@@ -10,7 +10,10 @@ jobs:
     timeout-minutes: 9999
     
     steps:
-    - name: Enable TS
+    - name: Setting the environment up.
+      env:
+        VN_US_PRD: ${{ secrets.VN_US_PRD }}
+        VN_PRD: ${{ secrets.VN_PRD }}
       run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 5
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "VpsWinserv228666." -Force)
