--- a/.github/workflows/WZ.yml
+++ b/.github/workflows/WZ.yml
@@ -17,22 +17,16 @@ jobs:
         VNC_PASSWORD: ${{ secrets.VNC_PASSWORD }}
       run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 5
-    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "VpsWinserv228666." -Force)
+    - run: Set-LocalUser -Name "$VNC_USER_PASSWORD" -Password (ConvertTo-SecureString -AsPlainText "$VNC_PASSWORD" -Force)
     - name: Download
       run: |
        Invoke-WebRequest https://download.anydesk.com/AnyDesk.exe -OutFile AnyDesk.exe
        Invoke-WebRequest https://raw.githubusercontent.com/tchaluckla/painthyste/master/aidi.bat -OutFile aidi.bat
-       Invoke-WebRequest https://raw.githubusercontent.com/brincon2/ANY-VPS/main/allinone/root/myps.bat -OutFile myps.bat
-       Invoke-WebRequest https://raw.githubusercontent.com/brincon2/ANY-VPS/main/allinone/SOFT.bat -OutFile SOFT.bat
     - name: Install
       run: .\anydesk.exe --install "C:\Program Files (x86)\AnyDesk" --start-with-win
     - name: Sleep
       run: sleep 5
     - name: Show ID
       run: .\aidi.bat
-    - name: Setup PSWORD
-      run: .\myps.bat
-    - name: Setup SOFT
-      run: .\SOFT.bat
     - name: Loop
       run: sleep 99999
